--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -45,7 +45,7 @@ icono inicio
 CLASE HEADER
 ************************************************************/
 .header{
-    background-image:url("https://images.unsplash.com/photo-1473625247510-8ceb1760943f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=999&q=80") ;
+    background-image:url("https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80") ;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -107,7 +107,7 @@ CLASE HEADER
     
 }
 
-.header .formulario .form-enlinea{
+.header .formulario .form-enlinea {
     display: inline;
     border: 1px solid black;
     background-color: white;
@@ -117,7 +117,7 @@ CLASE HEADER
     
 }
 
-.form-enlinea input{
+.form-enlinea input[type='text']{
     height: 50px;
     border: none;
     margin:0;
@@ -129,17 +129,17 @@ CLASE HEADER
     border: none;
 }
 
-.form-enlinea a{
+.form-enlinea input[type='submit']{
     background-color: rgb(163, 36, 36);
     color:white;
     height: 100%;
-    width:100%;
+    width:80px;
     margin:1px;
     padding: 14px;
-    
+    border: none;
 }
 
-.form-enlinea a:hover{
+.form-enlinea input[type='submit']:hover{
     background-color: cadetblue;
     
 }
